fixed carousel layout spacing on the sides

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -61,8 +61,8 @@ li.bold {
 .slide1 {
   @include bgimage;
   background-image: url("https://images.unsplash.com/photo-1442115597578-2d0fb2413734?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80");
-  height: 600px;
   width: 100%;
+  height: 600px;
 }
 .slide2 {
   @include bgimage;
@@ -97,6 +97,10 @@ li.bold {
 
 //home
 .home {
+  .col-sm-12 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   .thumbnail {
     background-color: #EEEEEE;
     height: 250px;
@@ -283,7 +287,7 @@ li.bold {
     p {
       text-align: center;
       font-size: 15px;
-      padding-bottom: 0px;
+      padding-bottom: 15px;
     }
   }
   .form-control {
